improved definition of Hgm

--- a/common/systemid.tex
+++ b/common/systemid.tex
@@ -336,12 +336,12 @@ Let $\opS$ be a \structe{system} with input $\rvx(n)$ and output $\rvy(n)$.
 \end{align*}
 \end{proof}
 
-% _____________________________________________
-%| |               ________      _________     |
-%|D|              / Sxy*(w)     / Syy(w)       |
-%|E| Hgm(w) = \  / -------- \  / ---------     |
-%|F|           \/   Sxx(w)   \/   Sxy(w)       |
-%|_|___________________________________________|
+% ______________________________________
+%| |                        ________    |
+%|D|           Sxy*(w)     / Syy(w)     |
+%|E| Hgm(w) = -------- \  / --------    |
+%|F|          |Sxy(w)|  \/   Sxx(w)     |
+%|_|____________________________________|
 \begin{definition}                      %
 \label{def:Hgm}                         %
 %---------------------------------------%
@@ -351,10 +351,8 @@ Let $\opS$ be a \structe{system} with input $\rvx(n)$ and output $\rvy(n)$.
     of $\estHa(\omega)$ and $\estHb(\omega)$ is defined as
   \\\indentx$
   \estHgm(\omega) \eqd
-    \sqrt{\frac{\ds\Swxy^\ast(\omega)}
-               {\ds\Swxx(\omega)}}
-    \sqrt{\frac{\ds\Swyy(\omega)}
-               {\ds\Swxy(\omega)}}
+     \frac{\Swxy^\ast(\omega)}{\abs{\Swxy(\omega)}}
+     \sqrt{\frac{\Swyy(\omega)}{\Swxx(\omega)}}
   $}
 \end{definition}
 
@@ -374,15 +372,27 @@ Let $\opS$ be a \structe{system} with input $\rvx(n)$ and output $\rvy(n)$.
 \begin{proof}
 \begin{align*}
   \estHgm(\omega)
-    &= \sqrt{\frac{\Swyy(\omega)\Swxy^\ast(\omega)}{\Swxx(\omega)\Swxy(\omega)}}
+    &= \frac{\Swxy^\ast(\omega)}
+            {\abs{\Swxy(\omega)}}
+       \sqrt{\frac{\Swyy(\omega)}
+                  {\Swxx(\omega)}}
     && \text{by definition of $\estHgm$}
     && \text{\xref{def:Hgm}}
+  \\&= \sqrt{
+         \frac{\brs{\Swxy^\ast(\omega)}^2}
+              {\abs{\Swxy(\omega)}^2}
+         \frac{\Swyy(\omega)}
+              {\Swxx(\omega)}}
+  \\&= \sqrt{
+         \frac{\Swxy^\ast(\omega)}
+              {\Swxy(\omega)}
+         \frac{\Swyy(\omega)}
+              {\Swxx(\omega)}}
   \\&= \sqrt{
          \frac{\Swxy^\ast(\omega)}
               {\Swxx(\omega)}
          \frac{\Swyy(\omega)}
-              {\Swxy(\omega)}
-            }
+              {\Swxy(\omega)}}
   \\&= \sqrt{\estHa(\omega)\estHb(\omega)}
     && \text{by definitions of $\estHa$ and $\estHb$}
     && \text{\xxref{def:H1}{def:H2}}
@@ -541,16 +551,16 @@ Let $\opS$ be a \structe{system} with input $\rvx(n)$ and output $\rvy(n)$.
     && \text{\xref{def:Hhm}}
   \\&= \frac{2}{\frac{\ds\Swxx(\omega)\Swyy(\omega) + \abs{\Swxy(\omega)}^2}
                      {\ds\Swyy(\omega)\Swxy^\ast(\omega)}}
-  \\&= \frac{2}{                                     %
+  \\&= \frac{2}{\ds                                  %
          \frac{\ds\Swxx(\omega)}                     %            2
-              {\Swxy^\ast(\omega)}                   %  -------------------
+              {\ds\Swxy^\ast(\omega)}                %  -------------------
          +                                           %   Sxx(w)     Sxy(w)
          \frac{\ds\Swxy(\omega)}                     %  -------- + --------
               {\ds\Swyy(\omega)}                     %   Sxy*(w)    Syy(w)
                }                                     %
-  \\&= \frac{2}{                                     %           2
-         \frac{1}{\estHa(\omega)}                    %   -----------------
-        +\frac{1}{\estHb(\omega)}}                   %      1         1
+  \\&= \frac{2}{\ds                                  %           2
+         \frac{\ds1}{\ds\estHa(\omega)}              %   -----------------
+        +\frac{\ds1}{\ds\estHb(\omega)}}             %      1         1
     && \text{by definitions of $\estHa$ and $\estHb$}%    ------ + ------
     && \text{\xxref{def:H1}{def:H2}}                 %     H1(w)    H2(w)
   \\&= \mathrlap{\text{\fnctb{Harmonic mean} of $\estHa(\omega)$ and $\estHb(\omega)$}}
