zero and infinity limits for alternate Hs

--- a/common/systemid.tex
+++ b/common/systemid.tex
@@ -322,14 +322,16 @@ Let $\opS$ be a \structe{system} with input $\rvx(n)$ and output $\rvy(n)$.
                 {\ds2\Swxx(\omega)\Swxy(\omega)}
     && \text{by definition of $\estHam$}
     && \text{\xref{def:Ham}}
-  \\&=  \frac{\ds \Swxy(\omega) \Swxy^\ast(\omega)}
+  \\&=\mathrlap{
+        \frac{\ds \Swxy(\omega) \Swxy^\ast(\omega)}
              {\ds2\Swxx(\omega) \Swxy     (\omega)}
       + \frac{\ds \Swxx(\omega) \Swyy     (\omega)}
              {\ds2\Swxx(\omega) \Swxy     (\omega)}
-  \\&=  \frac{
+     =  \frac{
         \frac{\ds\Swxy^\ast(\omega)} {\ds\Swxx(\omega)}
       + \frac{\ds\Swyy     (\omega)} {\ds\Swxy(\omega)}
         }{2}
+     }
   \\&= \frac{\ds\estHa(\omega) + \estHb(\omega)}{2}
     && \text{by definitions of $\estHa$ and $\estHb$}
     && \text{\xxref{def:H1}{def:H2}}
@@ -351,8 +353,8 @@ Let $\opS$ be a \structe{system} with input $\rvx(n)$ and output $\rvy(n)$.
     of $\estHa(\omega)$ and $\estHb(\omega)$ is defined as
   \\\indentx$
   \estHgm(\omega) \eqd
-     \frac{\Swxy^\ast(\omega)}{\abs{\Swxy(\omega)}}
-     \sqrt{\frac{\Swyy(\omega)}{\Swxx(\omega)}}
+     \frac{\ds\Swxy^\ast(\omega)}{\ds\abs{\Swxy(\omega)}}
+     \sqrt{\frac{\ds\Swyy(\omega)}{\ds\Swxx(\omega)}}
   $}
 \end{definition}
 
@@ -372,27 +374,29 @@ Let $\opS$ be a \structe{system} with input $\rvx(n)$ and output $\rvy(n)$.
 \begin{proof}
 \begin{align*}
   \estHgm(\omega)
-    &= \frac{\Swxy^\ast(\omega)}
-            {\abs{\Swxy(\omega)}}
-       \sqrt{\frac{\Swyy(\omega)}
-                  {\Swxx(\omega)}}
-    && \text{by definition of $\estHgm$}
-    && \text{\xref{def:Hgm}}
-  \\&= \sqrt{
+    &\eqd \frac{\Swxy^\ast(\omega)}        % 
+               {\abs{\Swxy(\omega)}}       %|                        ________
+          \sqrt{\frac{\Swyy(\omega)}       %|           Sxy*(w)     / Syy(w) 
+                     {\Swxx(\omega)}}      %| Hgm(w):= -------- \  / --------
+    && \text{by definition of $\estHgm$}   %|          |Sxy(w)|  \/   Sxx(w) 
+    && \text{\xref{def:Hgm}}               %|
+  \\&=\mathrlap{
+       \sqrt{
          \frac{\brs{\Swxy^\ast(\omega)}^2}
               {\abs{\Swxy(\omega)}^2}
          \frac{\Swyy(\omega)}
               {\Swxx(\omega)}}
-  \\&= \sqrt{
+     = \sqrt{
          \frac{\Swxy^\ast(\omega)}
               {\Swxy(\omega)}
          \frac{\Swyy(\omega)}
               {\Swxx(\omega)}}
-  \\&= \sqrt{
+     = \sqrt{
          \frac{\Swxy^\ast(\omega)}
               {\Swxx(\omega)}
          \frac{\Swyy(\omega)}
               {\Swxy(\omega)}}
+       }
   \\&= \sqrt{\estHa(\omega)\estHb(\omega)}
     && \text{by definitions of $\estHa$ and $\estHb$}
     && \text{\xxref{def:H1}{def:H2}}
@@ -549,15 +553,16 @@ Let $\opS$ be a \structe{system} with input $\rvx(n)$ and output $\rvy(n)$.
                {\ds\Swxx(\omega)\Swyy(\omega) + \abs{\Swxy(\omega)}^2}
     && \text{by definition of $\estHhm$}
     && \text{\xref{def:Hhm}}
-  \\&= \frac{2}{\frac{\ds\Swxx(\omega)\Swyy(\omega) + \abs{\Swxy(\omega)}^2}
+  \\&= \mathrlap{
+       \frac{2}{\frac{\ds\Swxx(\omega)\Swyy(\omega) + \abs{\Swxy(\omega)}^2}
                      {\ds\Swyy(\omega)\Swxy^\ast(\omega)}}
-  \\&= \frac{2}{\ds                                  %
+     = \frac{2}{\ds                                  %
          \frac{\ds\Swxx(\omega)}                     %            2
               {\ds\Swxy^\ast(\omega)}                %  -------------------
          +                                           %   Sxx(w)     Sxy(w)
          \frac{\ds\Swxy(\omega)}                     %  -------- + --------
               {\ds\Swyy(\omega)}                     %   Sxy*(w)    Syy(w)
-               }                                     %
+               }}                                    %
   \\&= \frac{2}{\ds                                  %           2
          \frac{\ds1}{\ds\estHa(\omega)}              %   -----------------
         +\frac{\ds1}{\ds\estHb(\omega)}}             %      1         1
@@ -593,14 +598,14 @@ Let $\opS$ be a \structe{system} with input $\rvx(n)$ and output $\rvy(n)$.
         && \text{by definition of $\estHa$}
         && \text{\xref{def:H1}}
       \\&= \abs{\frac{\inprod{\rvy}{\rvx}}{\norm{\rvx}^2}}
-      \\&= \frac{\abs{\inprod{\rvy}{\rvx}}}{\norm{\rvx}^2}
+         = \frac{\abs{\inprod{\rvy}{\rvx}}}{\norm{\rvx}^2}
       \\&\le \frac{\abs{\inprod{\rvy}{\rvx}}}{\norm{\rvx}^2}
              \abs{\frac{\norm{\rvx}\norm{\rvy}}{\inprod{\rvy}{\rvx}}}^2
         && \text{by \thme{Cauchy Schwartz inequality}}
         && \text{\prefp{thm:cs}}
       \\&= \frac{\norm{\rvy}^2}{\abs{\inprod{\rvy}{\rvx}}}
-      \\&= \abs{\frac{\norm{\rvy}^2}{\inprod{\rvx}{\rvy}}}
-      \\&= \abs{\frac{\Swyy(\omega)}{\Swxy(\omega)}}
+         = \abs{\frac{\norm{\rvy}^2}{\inprod{\rvx}{\rvy}}}
+         = \abs{\frac{\Swyy(\omega)}{\Swxy(\omega)}}
       \\&= \abs{\estHb}
         && \text{by definition of $\estHb$}
         && \text{\xref{def:H2}}
@@ -662,8 +667,6 @@ It features a \vale{scaling parameter} $s$ in the range $\intco{0}{\infty}$
 that can be adjusted depending on the ratio of output and input noise.
 And as it turns out, $\estHs = \estHb$ when $s=0$, $\estHs=\estHv$ when $s=1$, and
 $\estHs\to\estHa$ as $s\to\infty$. % \xref{thm:Hs}.
-
-
 % ________________________________________________________________________________
 %| |                                  __________________________________________  |
 %|D|                    2         \  /[          2       ]2       2 |        |2   |
@@ -671,12 +674,12 @@ $\estHs\to\estHa$ as $s\to\infty$. % \xref{thm:Hs}.
 %|F| Hs(w) = -------------------------------------------------------------------- |
 %| |                                      2 Sxy(w)                                |
 %|_|______________________________________________________________________________|
-\begin{definition}
+\begin{definition}                                                                %
 \footnote{                                                                        %
   \citerpgc{shin2008}{293}{0470725648}{(9.67) with $\kappa(\omega)=s^2$},         %
   \citePpc{white2006}{679}{(6) with $\kappa(\omega)=s^2$},                        %
   \citePc{leclere2012}{(10) $\kappa(f)=1/s^2$ and $x$ and $y$ swapped},           %
-  \citePc{zheng2002}{918}{10), seems to differ}                                   %
+  \citePpc{zheng2002}{918}{(10), seems to differ}                                 %
   }                                                                               %
 \label{def:Hs}                                                                    %
 %---------------------------------------------------------------------------------%
@@ -718,7 +721,7 @@ Let $\estHs(\omega)$ be defined as in \prefpp{def:Hs}.
     && \text{\xref{def:Hs}}
   \\&= \frac{\Swyy(\omega)- 0 + \sqrt{\brs{\Swyy(\omega) -  0}^2 + 0}}
             {2\Swxy(\omega)}
-  \\&= \frac{\Swyy(\omega)}
+     = \frac{\Swyy(\omega)}
             {\Swxy(\omega)}
   \\&\eqd \estHb(\omega)
     && \text{by def. of $\estHb$}
@@ -731,7 +734,7 @@ Let $\estHs(\omega)$ be defined as in \prefpp{def:Hs}.
              \sqrt{\brs{\Swyy(\omega) -  s^2 \Swxx(\omega)}^2 + 4 s^2 \abs{\Swxy(\omega)}^2}
             }{2\Swxy(\omega)}}_{s=1}
     && \text{by def. of $\estHs$}
-    && \text{by \xref{def:Hs}}
+    && \text{\xref{def:Hs}}
   \\&= \frac{\Swyy(\omega)- \Swxx(\omega) +
              \sqrt{\brs{\Swyy(\omega) -  \Swxx(\omega)}^2 + 4 \abs{\Swxy(\omega)}^2}
             }{2\Swxy(\omega)}
@@ -745,7 +748,7 @@ Let $\estHs(\omega)$ be defined as in \prefpp{def:Hs}.
        \frac{\Swyy(\omega)- s^2 \Swxx(\omega) + \sqrt{\brs{\Swyy(\omega) -  s^2 \Swxx(\omega)}^2 + 4 s^2 \abs{\Swxy(\omega)}^2}
             }{2\Swxy(\omega)}
     && \text{by def. of $\estHs$}
-    && \text{by \xref{def:Hs}}
+    && \text{\xref{def:Hs}}
   \\&\eqd \lim_{p\to0}
        \frac{\Swyy(\omega)- \sfrac{1}{p} \Swxx(\omega) + \sqrt{\brs{\Swyy(\omega) -  \sfrac{1}{p} \Swxx(\omega)}^2 + 4 \sfrac{1}{p} \abs{\Swxy(\omega)}^2}
             }{2\Swxy(\omega)}
@@ -758,21 +761,25 @@ Let $\estHs(\omega)$ be defined as in \prefpp{def:Hs}.
        \frac{\ddp\brs{p\Swyy(\omega)-  \Swxx(\omega) + \sqrt{\brs{p\Swyy(\omega) -  \Swxx(\omega)}^2 + 4p\abs{\Swxy(\omega)}^2}}
             }{\ddp\brs{2p\Swxy(\omega)}}
     &&    \text{by \thme{l'H{/<o}pital's rule}}
-  \\&= \lim_{p\to0}
+  \\&=\mathrlap{
+       \lim_{p\to0}
        \frac{\ds\Swyy(\omega) +
             \frac{2\brs{p\Swyy(\omega) -  \Swxx(\omega)}\Swyy(\omega) + 4\abs{\Swxy(\omega)}^2}
                  {2\sqrt{\brs{p\Swyy(\omega) -  \Swxx(\omega)}^2 + 4p\abs{\Swxy(\omega)}^2}}
             }{\ds2\Swxy(\omega)}
-  \\&= \frac{\ds\Swyy(\omega) +
+     = \frac{\ds\Swyy(\omega) +
             \frac{-2\Swxx(\omega)\Swyy(\omega) + 4\abs{\Swxy(\omega)}^2}
                  {2\sqrt{\brs{ -  \Swxx(\omega)}^2 }}
             }{\ds2\Swxy(\omega)}
-  \\&= \frac{2\Swyy(\omega)\Swxx(\omega) - 2\Swxx(\omega)\Swyy(\omega) + 4\abs{\Swxy(\omega)}^2}
+       }
+  \\&=\mathrlap{ 
+       \frac{2\Swyy(\omega)\Swxx(\omega) - 2\Swxx(\omega)\Swyy(\omega) + 4\abs{\Swxy(\omega)}^2}
             {4\Swxx(\omega)\Swxy(\omega)}
-  \\&= \frac{4\Swxy^\ast(\omega)\Swxy(\omega)}
+     = \frac{4\Swxy^\ast(\omega)\Swxy(\omega)}
             {4\Swxx(\omega)\Swxy(\omega)}
-  \\&= \frac{\Swxy^\ast(\omega)}
+     = \frac{\Swxy^\ast(\omega)}
             {\Swxx(\omega)}
+      }
   \\&\eqd \estHa(\omega)
     && \text{by def. of $\estHa$}
     && \text{\xref{def:H1}}
@@ -1120,6 +1127,84 @@ Let $\estHs(\omega; s)$ be defined as in \prefpp{def:Hs}.
        }
   }
 \end{proposition}
+\begin{proof}
+Note: There is no complete proof here at this time.
+
+Let $p\eqd s^2$.
+Let $\ds\fG(s)\eqd
+  \frac{\ds 2s^2\Swyx }
+       {\ds  s^2\Swxx -\Swyy  +
+        \sqrt{\brs{s^2\Swxx -\Swyy }^2 + 4s^2\abs{\Swxy }^2}
+       }$.
+\begin{align*}
+  \lim_{p\to\infty}\fG(s) 
+    &\eqd 
+          \frac{\ds 2s^2\Swyx }
+               {\ds  s^2\Swxx -\Swyy  +
+                \sqrt{\brs{s^2\Swxx -\Swyy }^2 + 4s^2\abs{\Swxy }^2}
+               }
+  \\&\eqd \lim_{p\to\infty} 
+          \frac{\ds 2p\Swyx }
+                {\ds  p\Swxx -\Swyy  +
+                 \sqrt{\brs{p\Swxx -\Swyy }^2 + 4p\abs{\Swxy }^2}
+                }
+  \\&=    \lim_{p\to\infty} 
+          \frac{\ds 2\Swyx }
+                {\ds  \Swxx -\sfrac{1}{p}\Swyy  +
+                 \sqrt{\brs{\Swxx -\sfrac{1}{p}\Swyy }^2 + \sfrac{4}{p}\abs{\Swxy }^2}
+                }
+  \\&=    \frac{\ds 2\Swyx }
+               {\ds  \Swxx  +
+                 \sqrt{\brs{\Swxx }^2 }
+               }
+  \\&=    \frac{\Swyx }
+               {\Swxx }
+  \\&\eqd \estHa 
+    && \text{by def. of $\estHa$}
+    && \text{\xref{def:H1}}
+  \\
+  \lim_{p\to0}\fG(s) 
+    &\eqd 
+          \frac{\ds 2s^2\Swyx }
+               {\ds  s^2\Swxx -\Swyy  +
+                \sqrt{\brs{s^2\Swxx -\Swyy }^2 + 4s^2\abs{\Swxy }^2}
+               }
+  \\&\eqd \lim_{p\to0} 
+          \frac{\ds 2p\Swyx }
+                {\ds  p\Swxx -\Swyy  +
+                 \sqrt{\brs{p\Swxx -\Swyy }^2 + 4p\abs{\Swxy }^2}
+                }
+  \\&=    \frac{\lim_{p\to0} \ddp}{\lim_{p\to0} \ddp}
+          \frac{\ds 2p\Swyx }
+                {\ds  p\Swxx -\Swyy  +
+                 \sqrt{\brs{p\Swxx -\Swyy }^2 + 4p\abs{\Swxy }^2}
+                }
+    &&    \text{by \thme{l'H{/<o}pital's rule}}
+  \\&=    \frac{\lim_{p\to0} \ddp}{\lim_{p\to0} \ddp}
+          \frac{\ds 2\Swyx }
+                {\ds  \Swxx  +
+                 \frac{2\Swxx\brs{p\Swxx -\Swyy } + 4\abs{\Swxy }^2}
+                      {2\sqrt{\brs{p\Swxx -\Swyy }^2 + 4p\abs{\Swxy }^2}}
+                }
+  \\&=    \frac{\ds 2\Swyx }
+                {\ds  \Swxx  +
+                 \frac{-2\Swxx\Swyy  + 4\abs{\Swxy }^2}
+                      {2\sqrt{\brs{-\Swyy }^2}}
+                }
+  \\&=    \frac{\ds 2\Swyx }{
+               \frac{\ds2\Swxx \Swyy  + -2\Swxx\Swyy  + 4\abs{\Swxy }^2}
+                    {2\Swyy }
+               }
+  \\&=    \frac{\ds 4\Swyy \Swyx }
+               {\ds 4\abs{\Swxy }^2}
+  \\&=    \frac{\ds \Swyy }
+               {\ds \Swxy }
+  \\&\eqd \estHb 
+    && \text{by def. of $\estHb$}
+    && \text{\xref{def:H2}}
+\end{align*}
+\end{proof}
+
 % _______________________________________________________________________
 %| |                                   2 Syx(w)                          |
 %|P| Hv(w) = ------------------------------------------------------------|
